--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 850px;
+    height: 800px;
     background-image: url("./img/thai-background.jpg");
 }
 
@@ -125,14 +125,19 @@ input {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    width: 1200px;
+    width: 1500px;
     padding: 40px;
 }
 
 .flight-box {
     display: flex;
     padding: 15px;
-    gap: 5px
+    gap: 5px;
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: 1px 5px 5px black;
+    margin: 30px;
+
 }
 
 .flight-box div {
@@ -149,4 +154,49 @@ input {
 .purchase-button, .save-button {
     background-color: #f37923;
     color: white;
+}
+
+
+.spinner-container {
+    display: none;
+    justify-content: center;
+    padding: 30px;
+}
+
+.spinner {
+    width: 80px;
+    height: 80px;
+    border: 6px solid;
+    border-color: #f37923 transparent #f37923 transparent;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    to {
+        transform: rotate(360deg)
+    }
+}
+
+#history-container {
+    display: none;
+    padding: 50px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#history-names {
+    justify-content: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+footer {
+    background-color: #f37923;
+    color: white;
+    display: flex;
+    justify-content: center;
+    font-size: 12px;
+    padding: 10px;
 }
