--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ input {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    width: 1300px;
+    width: 1400px;
     padding: 40px;
 }
 
@@ -151,6 +151,7 @@ input {
     border-radius: 15px;
     box-shadow: 1px 5px 5px black;
     margin: 30px;
+    width: 400px;
 
 }
 
@@ -199,4 +200,22 @@ footer {
     justify-content: center;
     font-size: 12px;
     padding: 10px;
+}
+
+@media (max-width: 700px) {
+    .navbar-brand {
+        font-size: 20px;
+    }
+    .navbar-brand img {
+        width: 20px;
+        height: 20px;
+    }
+    #city-name {
+        font-size: 30px;
+
+    }
+    .city-name img {
+        width: 40px;
+        height: 40px;
+    }
 }
